packages/react-components/src/components/overlay/overlay.module.css
@layer components {
  .Overlay {
    &[data-overlay-visible='true'] {
      display: block;
      position: fixed;
      inset: 0;
    }

    &[data-overlay-obfuscate='false'] {
      pointer-events: none;
    }
  }

  .Backdrop {
    position: fixed;
    inset: 0;
    z-index: -1;
    background-color: var(--global-background);

    &[data-overlay-color='light'] {
      background-color: --token(--color-primary-0);
    }

    &[data-overlay-color='dark'] {
      background-color: --token(--color-primary-100);
    }
  }
}

